<resources>
    <string name="settings">Settings</string>
    <string name="app_name">Multiple Choice Quiz</string>
    <string name="welcome_back_martin">Welcome back Martin</string>
    <string name="classes">Classes</string>
    <string name="account">Account</string>
    <string name="results">Results</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="space_ed">Space Ed</string>
    <string name="or_you_can_call_02_9385_1333">Or you can call (02) 9385 1333</string>
    <string name="please_contact_unsw_it_via_itservicecentre_unsw_edu_au">Please contact UNSW IT via itservicecentre@unsw.edu.au</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
    <string name="add_classes">Add Classes</string>
    <string name="and_infrastructure">and infrastructure</string>
    <string name="infs3634">INFS3634</string>
    <string name="network">Network</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="infs2607_network">INFS2607 Network</string>
    <string name="title_activity_user_classes">user_classes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_more_classes">Add more classes</string>
    <string name="title_activity_user_account">user_account</string>
    <string name="more_to_come">More to come!</string>
    <string name="sorry">Sorry</string>
    <string name="answer">Answer</string>
    <string name="there_are_three">There are three:</string>
    <string name="server_stores_data_or_software_to_be_accessed_by_the_clients">Server: • Stores data or software to be accessed by the clients</string>
    <string name="client_provides_users_with_access_to_the_data_or_software_on_the_server">Client: Provides users with access to the data or software on the server</string>
    <string name="medium_pathway_through_which_the_communication_occurs_could_be_a_cable_or_devices_such_as_switches_or_routers">Medium: • Pathway through which the communication occurs • Could be a cable, or devices such as switches or routers</string>
    <string name="question_1">Question 1</string>
    <string name="hint_double_tap_the_screen_to_flip_the_card_press_next_when_you_re_done_with_the_question">Hint: Double tap the screen to flip the card. Press next when you\'re done with the question!</string>
    <string name="modules">Modules</string>
    <string name="introduction_to">Introduction to</string>
    <string name="image_of_networking">Image of networking</string>
    <string name="networking">networking</string>
    <string name="text_1">1.</string>
    <string name="data_frames_and">Data Frames and</string>
    <string name="score_0">Score: 0</string>

</resources>