<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user_homepage"
    android:id="@+id/drawer_layout">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <TextView
            android:id="@+id/prompt1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignBottom="@+id/app_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/cabin"
            android:text="@string/classes"
            android:layout_gravity="start"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />



    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/class_img"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="97dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@color/colorPrimaryMountainWidow" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignTop="@+id/class_img"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif"
            android:text="@string/infs2607_network"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignEnd="@+id/class_img"
            android:layout_alignRight="@+id/class_img"
            android:layout_alignBottom="@+id/class_img"
            android:layout_alignParentLeft="@+id/textView4"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif"
            android:text="@string/and_infrastructure"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/network_icon"
            android:layout_width="67dp"
            android:layout_height="62dp"
            android:layout_alignStart="@+id/class_img"
            android:layout_alignLeft="@+id/class_img"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignBottom="@+id/class_btn"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            app:srcCompat="@drawable/network_icon" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="222dp"
            android:layout_height="188dp"
            android:layout_below="@+id/class_btn"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="144dp"
            android:layout_marginBottom="55dp"
            android:layout_toEndOf="@+id/network_icon"
            android:layout_toRightOf="@+id/network_icon"
            app:srcCompat="@drawable/user_homepage_image" />

        <Button
            android:id="@+id/class_btn"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignEnd="@+id/class_img"
            android:layout_alignRight="@+id/class_img"
            android:layout_alignBottom="@+id/class_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="3dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:visibility="visible" />

    </RelativeLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="702dp" />

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu="@menu/navigation_menu"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        app:headerLayout="@layout/nav_header_user_account">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>